Here's the commented version of the code:

```c++
#!/usr/bin/env ruby

# Copyright 2016 gRPC authors.

# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at

#     http://www.apache.org/licenses/LICENSE-2.0

# distributed under the License is distributed on an "AS IS" BASIS,

# See the License for the specific language governing permissions and
# limitations under the License.

# Enable fork support for gRPC
ENV['GRPC_ENABLE_FORK_SUPPORT'] = "1"
# Ensure this script only runs on Linux as forking is only supported there
fail "forking only supported on linux" unless RUBY_PLATFORM =~ /linux/

# Set up load paths for required libraries
this_dir = File.expand_path(File.dirname(__FILE__))
protos_lib_dir = File.join(this_dir, 'lib')
grpc_lib_dir = File.join(File.dirname(this_dir), 'lib')
$LOAD_PATH.unshift(grpc_lib_dir) unless $LOAD_PATH.include?(grpc_lib_dir)
$LOAD_PATH.unshift(protos_lib_dir) unless $LOAD_PATH.include?(protos_lib_dir)
$LOAD_PATH.unshift(this_dir) unless $LOAD_PATH.include?(this_dir)

# Require necessary libraries
require 'grpc'
require 'end2end_common'

# Performs a simple RPC call to the echo service
# @param stub [GRPC::ClientStub] The client stub to use for the RPC call
# @return [Echo::EchoResponse] The response from the server
def do_rpc(stub)
  stub.echo(Echo::EchoRequest.new(request: 'hello'), deadline: Time.now + 300)
end

# Main execution method that sets up and runs the fork test
def main
  # Set up paths and pipes for inter-process communication
  this_dir = File.expand_path(File.dirname(__FILE__))
  echo_server_path = File.join(this_dir, 'echo_server.rb')
  
  # Create pipes for parent-child communication
  to_child_r, _to_child_w = IO.pipe
  to_parent_r, to_parent_w = IO.pipe

  # Spawn the echo server process
  Process.spawn(RbConfig.ruby, echo_server_path, in: to_child_r, out: to_parent_w, err: "server_log")
  
  # Close unused pipe ends to prevent leaks
  to_child_r.close
  to_parent_w.close
  
  # Get the server port from the child process
  child_port = to_parent_r.gets.strip
  STDERR.puts "server running on port: #{child_port}"
  
  # Create large channel arguments to test memory handling
  key = "grpc." * 100_000
  value = "testvalue" * 100_000
  
  # Create a client stub to communicate with the server
  stub = Echo::EchoServer::Stub.new("localhost:#{child_port}", :this_channel_is_insecure, channel_args: { key => value })
  
  # Prepare for forking
  with_logging("parent: GRPC.prefork") { GRPC.prefork }
  
  # Fork a child process
  pid = fork do
    # Child process specific initialization
    with_logging("child: GRPC.postfork_child") { GRPC.postfork_child }
    
    # Clear large memory allocations and compact heap
    key.clear
    value.clear
    GC.compact
    
    # Perform an RPC call in the child process
    with_logging("child: post-fork RPC") { do_rpc(stub) }
    STDERR.puts "child: done"
  end
  
  # Parent process specific post-fork handling
  with_logging("parent: GRPC.postfork_parent") { GRPC.postfork_parent }
  
  # Wait for child process to complete
  Process.wait pid
  STDERR.puts "parent: done"
end

# Execute the main function
main
```

The comments explain:
1. The overall purpose of the script (testing gRPC fork support)
2. Environment setup and requirements
3. The RPC function's purpose and parameters
4. The main execution flow including:
   - Server process spawning
   - Inter-process communication setup
   - Memory handling before/after fork
   - Parent and child process responsibilities
5. Key operations and their purposes

The comments are designed to help future developers understand:
- Why certain operations are performed
- The expected behavior of the code
- The flow of execution between parent and child processes
- Memory management considerations
- The overall test scenario being implemented